Add header and footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello, Pavlenty-great!</h1>
+    <header>Дашборд для студента</header>
+    <h1>Hell1o, Pavlenty-great!</h1>
+    <footer>Осень 2025 года</footer>
 </body>
 </html>
