--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
     <header>Дашборд для студента</header>
     <h1>Hell1o, Pavlenty-great!</h1>
+    <main>
+        <a href="#">Расписание</a>
+        <a href="#">Успеваемость</a>
+        <a href="#">План обучения</a>
+    </main>
     <footer>Осень 2025 года</footer>
 </body>
 </html>
