--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <header>Дашборд для студента</header>
     <h1>Hell1o, Pavlenty-great!</h1>
     <main>
-        <a href="#">Расписание</a>
-        <a href="#">Успеваемость</a>
-        <a href="#">План обучения</a>
+        <nav>
+            <a href="#">Расписание</a>
+            <a href="#">Успеваемость</a>
+            <a href="#">План обучения</a>
+        </nav>
     </main>
     <footer>Осень 2025 года</footer>
 </body>
